--- a/.github/workflows/CI-java-qa.yml
+++ b/.github/workflows/CI-java-qa.yml
@@ -2,9 +2,9 @@ name: CI - Java Maven-QA
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "staging" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "staging" ]
   workflow_dispatch:
 
 permissions:
