--- a/.github/workflows/CI-java-dev.yml
+++ b/.github/workflows/CI-java-dev.yml
@@ -2,9 +2,9 @@ name: CI - Java Maven-DEV
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "develop" ]
   workflow_dispatch:
 
 permissions:
